# peggy

./: .env.example  .gitignore  ONBOARDING.md  PROMPT_TUNING.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  globals.py  main.py
backend/app/agent/: client.py  context.py  orchestrator.py  planner.py  tool_selector.py
backend/app/agent/tools/: __init__.py  calendar_tools.py  conversation_tools.py  gmail_tools.py  list_tools.py  (+9 more)
backend/app/models/: tables.py
backend/app/observability/: langfuse_client.py
backend/app/prompts/: composer.py  loader.py  system_v1.yaml
backend/app/routers/: auth.py  calendar.py  chat.py  people.py  planning.py  profile.py  tasks.py  todos.py
backend/app/schemas/: agent.py  common.py  people.py  profile.py
backend/app/services/: conversations.py  daily_plans.py  embeddings.py  field_mappings.py  gmail.py  google_calendar.py  ingestion.py  lists.py  notifications.py  people.py  planning.py  proactive.py  profile.py  scheduled_jobs.py  serialization.py  tasks.py  timezone.py  todos.py  weather.py  wiki.py
backend/evals/scenarios/: smoke.yaml
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_google_credentials.py  003_llm_calls_table.py  004_profile_fact_embeddings.py  005_people_embeddings.py  006_interaction_message_chain.py  007_daily_plans_table.py  008_merge_tasks_into_todos.py  009_llm_calls_tools_column.py  010_wiki_pages_table.py  011_prompt_versioning.py
backend/scripts/: import_datasets.py  replay.py  seed_golden.py
(+64 files in other folders)
